Implemented the sudoku solver using BFS and a solution tree.